# handheld_video_player

./: Cargo.toml  Cross.toml  readme.md
src/: draw.rs  main.rs  utils.rs
